# adbsnake

./: .gitignore  pyproject.toml
adbsnake/: __init__.py  common.py  device.py  shield.py
tests/: test_device.py
